fixe overflowing

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -196,9 +196,7 @@ html{
 			min-width: 300px;
 			background-color: $c-white;
 			border-radius: 8px;
-			&:hover{
-				border: 5px solid transparent;
-			}
+	
 				.img {
 				img {
 					width: 100%;
@@ -276,10 +274,8 @@ footer
 	li {
 		color: $c-white;
 		margin: 1.5rem 0;
-		font-size: 1.2rem;
 	}
 	.last-child {
-		width: 40%;
 		display: flex;
 		flex-direction: column;
 
